Fix tiny status bar styling (was too small)

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -62,12 +62,12 @@
 
 .server-status.server-status-tiny {
 	padding: 2px;
-	line-height: .5em;
-	font-size: .5em;
+	line-height: .75em;
+	font-size: .75em;
 }
 
 .server-status.server-status-tiny li {
-	line-height: .5em;
+	line-height: .75em;
 }
 
 .server-status ul {
